[gd_scene load_steps=10 format=2]

[ext_resource path="res://plus/PlusBox.glb" type="PackedScene" id=1]
[ext_resource path="res://plus/PlusBox.gd" type="Script" id=2]
[ext_resource path="res://blocks/BlockMove.tscn" type="PackedScene" id=3]
[ext_resource path="res://blocks/BlockList.tscn" type="PackedScene" id=4]
[ext_resource path="res://blocks/bubble_bg.png" type="Texture" id=5]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 3, 3 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 1
albedo_texture = SubResource( 2 )

[sub_resource type="SphereShape" id=4]

[node name="PlusBox" type="Spatial"]
script = ExtResource( 2 )

[node name="Mesh" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )

[node name="Bubble" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.19637, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1000, 1000 )
render_target_v_flip = true

[node name="Root" type="Node2D" parent="Viewport"]
position = Vector2( 16, 16 )
scale = Vector2( 2, 2 )

[node name="BlockList" parent="Viewport/Root" instance=ExtResource( 4 )]

[node name="BlockMove" parent="Viewport/Root/BlockList" instance=ExtResource( 3 )]

[node name="BlockMove2" parent="Viewport/Root/BlockList" instance=ExtResource( 3 )]

[node name="BG" type="Sprite" parent="Viewport"]
z_index = -500
texture = ExtResource( 5 )
centered = false

[node name="MouseDetect" type="StaticBody" parent="."]
collision_layer = 2147483648
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="MouseDetect"]
shape = SubResource( 4 )

[connection signal="mouse_entered" from="MouseDetect" to="." method="_on_MouseDetect_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetect" to="." method="_on_MouseDetect_mouse_exited"]
